src/css/main.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

body {
  /*background: #e0e0d1;*/
  /*background: #d5dae2;*/
  background: #f7f3f3;
}

[data-theme='dark'] body {
  background: #030313;
}

body[data-location='home'] {
  background: #f7f3f3;
}

/* You can override the default Infima variables here. */
:root,
.alert {
  --ifm-background-color: #f7f3f3;
  --ifm-heading-color: #453f44;
  --ifm-toc-border-color: #5c5f62;
  --ifm-heading-font-weight: 300;
  --ifm-color-primary: #ff1ad3;
  --ifm-color-primary-dark: #29784c;
  --ifm-color-primary-darker: #277148;
  --ifm-color-primary-darkest: #205d3b;
  --ifm-color-primary-light: #33925d;
  --ifm-color-primary-lighter: #359962;
  --ifm-color-primary-lightest: #3cad6e;
  --ifm-code-font-size: 90%;
  --ifm-code-background: color(srgb 0.93 0.93 0.93);
  --ifm-h1-font-size: 70px;
  --ifm-navbar-link-color: rgb(251, 67, 233);
  --ifm-alert-background-color: rgb(81, 232, 183);
  --ifm-alert-border-color: rgb(96, 237, 147);
  --ifm-blockquote-border-color: #63666a;
  --ifm-link-color: black;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'],
[data-theme='dark'] .alert {
  --ifm-background-color: #030313 !important;
  --ifm-heading-color: rgb(168, 255, 224);
  --ifm-color-primary: #25c2a0;
  --ifm-color-primary-dark: #21af90;
  --ifm-color-primary-darker: #1fa588;
  --ifm-color-primary-darkest: #1a8870;
  --ifm-color-primary-light: #29d5b0;
  --ifm-color-primary-lighter: #32d8b4;
  --ifm-color-primary-lightest: #4fddbf;
  --ifm-alert-background-color: rgb(26, 198, 172);
  --ifm-alert-foreground-color: color(srgb 0.022 0.275 0.238);
  --ifm-alert-border-color: rgb(145, 235, 221);
  --ifm-link-color: white;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

.alert {
  margin-top: 100px;
}

.alert.alert--warning {
  background: rgb(240, 235, 108);
  border-color: rgb(237, 232, 100);
}

code {
  background-color: color(srgb 0.905 0.9005 0.9005);
  border: transparent;
  padding: 5px 2px;
}

a {
  /*color: black;*/
  font-style: italic;
  text-decoration: underline;
}

.theme-doc-sidebar-container a {
  font-style: inherit;
  text-decoration: none;
}

.alert a {
  color: #093727;
  text-decoration: none;
  font-style: italic;
  text-decoration: underline;
  text-decoration-color: #093727;
}

body {
  font-size: 20px;
}

h1 {
  font-size: 60px;
  font-weight: 200;
  margin-bottom: 50px !important;
}

.markdown > h2 {
  margin-top: 40px;
  margin-bottom: 40px;
}

.markdown > h3 {
  font-weight: 600;
}

.navbar {
  border-bottom: none !important;
  box-shadow: none;
  background: #f7f3f3;
}

[data-theme='dark'] .navbar {
  background: #030313;
}

.theme-doc-sidebar-container {
  font-size: 16px;
  border-right: none !important;
}

html[data-theme='light'] {
  .theme-doc-sidebar-container a {
    color: #282828;
  }
}

.docSidebarContainer_node_modules-\@docusaurus-theme-classic-lib-theme-DocRoot-Layout-Sidebar-styles-module {
  border-right: none !important;
}

.theme-code-block {
  border-radius: 20px !important;
  margin-top: 30px !important;
  margin-bottom: 30px !important;
}

.theme-code-block pre {
  background: #0e0928 !important;
  padding: 20px;
  border-radius: 20px !important;
  font-size: 18px;
}

.theme-doc-markdown {
  margin-top: 0px;
}

main > .container > .row > .col {
  max-width: 65% !important;
}

@media (max-width: 700px) {
  main > .container > .row > .col {
    max-width: 100% !important;
  }
}

.pagination-nav__link {
  border: none;
  background: rgb(240, 239, 242);
  padding-top: 30px;
}

.pagination-nav__sublabel {
  opacity: 0;
}

.pagination-nav__label {
  color: rgb(100, 45, 235);
}

.pagination-nav__link--next .pagination-nav__label::after,
.pagination-nav__link--prev .pagination-nav__label::before {
  display: none;
}

.logo h1,
.logo h2 {
  display: inline-block;
  -webkit-text-stroke-width: 3px;
  -webkit-text-stroke-color: #f204ff;
  color: #005c05;
  padding: 10px 5px;
  border-radius: 4px;
  font-weight: 400;
  font-size: 100px;

  -webkit-text-stroke-color: #04ebff;
  -webkit-text-stroke-color: #ff334c;
  text-shadow: #e904ff 0px 0px 30px;
  text-shadow: rgba(255, 4, 98, 0.13) 0px 0px 30px;
  text-shadow: rgba(163, 0, 61, 0.12) 0px 0px 30px;
  color: #f106ff;
}

.logo h1.small,
.logo h2.small {
  text-shadow: none !important;
  -webkit-text-stroke-color: none !important;
}

.right-sidebar-item {
  /* position: fixed; */
  position: absolute;
  right: 0;
  background: #0e0928;
  color: #25ffb8;
  width: calc(25% - 25px);
  margin-right: 3%;
  padding: 12px;
  border-radius: 10px;
  margin-top: 10px !important;
}

.right-sidebar-item pre {
  font-size: 16px;
}

@media (max-width: 700px) {
  .right-sidebar-item {
    display: none;
    /*position: relative;*/
    /*width: calc(35% - 25px);*/
  }
}

@media (max-width: 1000px) {
  .right-sidebar-item {
    width: calc(35% - 25px);
  }
}

@media (max-width: 1500px) {
  .right-sidebar-item {
    /*width: 15%;*/
  }
}

.theme-doc-footer,
.pagination-nav,
.theme-doc-breadcrumbs,
.footer {
  display: none;
}

.theme-code-block {
  margin: 30px 0;
  box-shadow: none !important;
}

.right-sidebar-item {
  margin-top: 80px;
  margin-bottom: 57px;
}

.table-of-contents a {
  font-size: 0.95rem;
  text-decoration: none;
}

